--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
   "devDependencies": {
     "@types/nodemailer": "^6.4.3",
     "@types/sequelize": "^4.28.10",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "jest": "^27.0.6",
     "lint-staged": "^10.5.2",
