--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,10 @@
         "react"
     ],
     "rules": {
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "no-underscore-dangle":"off",
+        "no-use-before-define":"off",
+        "no-console":"off",
+        "no-useless-escape":"off"
     }
 }
