--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "my-app",
   "version": "7.6.2",
   "scripts": {
@@ -13,6 +13,7 @@
     "@sentry/node": "^6.9.0",
     "@sentry/tracing": "^6.9.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "email-templates": "^8.0.7",
